more project title alignment issues

--- a/style.css
+++ b/style.css
@@ -157,7 +157,6 @@ h3{
 hr{
     border: 1px solid #b5b5b5;
     text-align: center;
-    padding-left: 50px;
     width: 85%;
 }
 
